# real_estate_transactions_japan

./: .gitignore  LICENSE  README.md  pyproject.toml
real_estate_transactions_japan/: app.py  maps.py
real_estate_transactions_japan/data_preprocessing/: __init__.py  preprocessing.py
